--- a/index.html
+++ b/index.html
@@ -1,12 +1,131 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-тетс
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Нердс Главная</title>
+</head>
+<body>
+  <nav class="top-nav">
+    <div class="main clear">
+      <a class="logo main-left"><img src="imaes/logo.png" alt="logo"></a>
+      <ul class="top-nav-list main-right">
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Клиенты</a></li>
+        <li><a href="#">Магазин</a></li>
+        <li><a href="#">Контакты</a></li>
+        <li><a href="#" class="top-nav-backet">Корзина</a></li>
+      </ul>
+    </div>
+  </nav>
+  <header class="header">
+    <div class="main slider slider-1">
+      <div class="slider-text">
+        <h1 class="header-title">Долго, дорого, скурпулезно</h1>
+        <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
+        <a href="#" class="btn">Узнать больше</a>
+      </div>
+    </div>
 
-  </body>
+    <div class="main slider slider-2">
+      <div class="slider-text">
+        <h2 class="header-title">Только ночь, только харкор</h2>
+        <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается</p>
+        <a href="#" class="btn">Узнать больше</a>
+      </div>
+    </div>
+    <div class="main slider slider-3">
+      <div class="slider-text">
+        <h2 class="header-title">Любим математику как никто другой</h2>
+        <p>Никакого креатива, только математические формулы<br>для расчета
+           идеальной пропорции для вашего сайта или мобильного приложения</p>
+           <a href="#" class="btn">Узнать больше</a>
+      </div>
+    </div>
+  </header>
+  <main class="main">
+      <ul class="catalog-list">
+        <li>
+          <img src="images/c1.jpg" alt="Веб-сайты">
+          <b>Веб-сайты</b>
+          <p>Мир никогда не будет прежним<br>
+             после того как увидит ваш сайт!</p>
+          <a href="#" class="btn">Заказать</a>
+        </li>
+        <li>
+          <img src="images/c2.jpg" alt="Приложения">
+          <b>Приложения</b>
+          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
+          <a href="#" class="btn-green">Заказать</a>
+        </li>
+        <li>
+          <img src="images/c3.jpg" alt="Презентации">
+          <b>Презентации</b>
+          <p>Вы даже не подозреваете,<br>  насколько вы изумительны!</p>
+          <a href="#" class="btn-yellow">Заказать</a>
+        </li>
+      </ul>
+    <section class="text clear">
+      <div class="main-left">
+        <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара</h2>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+           превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <strong>Выполняем заказы на разработку:</strong>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </div>
+      <div class="main-right">
+        <img src="imgers/text-img.png" alt="логотип" class="text-img">
+        <b>с 2004 года Любим точность во всем:</b>
+        <ul class="text-item">
+          <li>
+           <b>146<sup>%</sup></b>
+           <span>Уровень самоотдачи</span>
+          </li>
+          <li>
+           <b>100<sup>%</sup></b>
+           <span>Соблюдение сроков</span>
+          </li>
+          <li>
+           <b>50<sup>%</sup></b>
+           <span>Минимальная предоплата</span>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="partners">
+      <a href="#" img src="images/p1.png" alt="htmlacademy"></a>
+      <a href="#" img src="images/p1.png" alt="borodinski"></a>
+      <a href="#" img src="images/p1.png" alt="pink"></a>
+      <a href="#" img src="images/p1.png" alt="mishka"></a>
+    </section>
+    </main>
+    <section class="map">
+      <div class="main">
+        <div class="map-text">
+          <h3>NЁRDS DESIGN STUDIO</h3>
+          <address>
+            191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8  тел.
+          </address>
+          <p>тел. +7 (812)275-75-75</p>
+          <a href="#" class="btn">Напишите нам</a>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="main clear">
+        <div class="main clear">
+          <a href="#" class="social">Вконтакте</a>
+          <a href="#" class="social">Фейсбук</a>
+          <a href="#" class="social">Инстаграмм</a>
+        </div>
+        <div class="main-left">
+          <strong>Давайте дружить, это выгодно!</strong>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+      </div>
+    </footer>
+</body>
 </html>
