--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,13 @@
 <head>
  <meta charset="utf-8">
  <title>Каталог</title>
+ <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <nav class="top-nav">
     <div class="main clear">
-      <a class="logo main-left"><img src="imaes/logo.png"></a>
+      <a class="logo main-left"><img src="img/logo-nerds.png" alt="logo"
+         width="160" height="65"></a>
       <ul class="top-nav-list main-right">
         <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
@@ -63,7 +65,7 @@
           <span></span>
           <span></span>
          </div>
-         <img src="images/catalog1.jpg" alt="sedona">
+         <img src="img/img-sedona.jpg" width="360" height="576" alt="sedona">
          <div class="catalog-over">
            <b>Sedona</b>
            <p>Информационный сайт для туристов</p>
@@ -76,7 +78,7 @@
           <span></span>
           <span></span>
          </div>
-         <img src="images/catalog2.jpg" alt="pink app">
+         <img src="img/img-pink.jpg" width="360" height="576" alt="pink app">
          <div class="catalog-over">
            <b>Pink app</b>
            <p>Продуктивный лендинг приложения для iOS и Android</p>
@@ -89,7 +91,7 @@
           <span></span>
           <span></span>
          </div>
-         <img src="images/catalog3.jpg" alt="Barbershop">
+         <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
          <div class="catalog-over">
            <b>Barbershop</b>
            <p>Сайт салона красоты. Для мужчин, да.</p>
@@ -102,7 +104,7 @@
           <span></span>
           <span></span>
          </div>
-         <img src="images/catalog4.jpg" alt="Mishka">
+         <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
          <div class="catalog-over">
            <b>Mishka</b>
            <p>Интернет магазин вязанных игрушек</p>
@@ -115,7 +117,7 @@
           <span></span>
           <span></span>
          </div>
-         <img src="images/catalog5.jpg" alt="A plus">
+         <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
          <div class="catalog-over">
            <b>A plus</b>
            <p>Лендинг курсов повышения квалификации</p>
@@ -128,7 +130,7 @@
           <span></span>
           <span></span>
          </div>
-         <img src="images/catalog6.jpg" alt="Квас">
+         <img src="img/img-kvast.jpg" width="360" height="576" alt="Квас">
          <div class="catalog-over">
            <b>Квас</b>
            <p>Промо-сайт производителя крафтового кваса</p>
