--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Нердс Главная</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <nav class="top-nav">
     <div class="main clear">
-      <a class="logo main-left"><img src="imaes/logo.png" alt="logo"></a>
+      <a class="logo main-left"><img src="img/logo-nerds.png" alt="logo"
+         width="160" height="65"></a>
       <ul class="top-nav-list main-right">
         <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
@@ -45,20 +47,20 @@
   <main class="main">
       <ul class="catalog-list">
         <li>
-          <img src="images/c1.jpg" alt="Веб-сайты">
+          <img src="img/c1.jpg" width="300" height="100" alt="Веб-сайты">
           <b>Веб-сайты</b>
           <p>Мир никогда не будет прежним<br>
              после того как увидит ваш сайт!</p>
           <a href="#" class="btn">Заказать</a>
         </li>
         <li>
-          <img src="images/c2.jpg" alt="Приложения">
+          <img src="img/c2.jpg" width="300" height="100" alt="Приложения">
           <b>Приложения</b>
           <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
           <a href="#" class="btn-green">Заказать</a>
         </li>
         <li>
-          <img src="images/c3.jpg" alt="Презентации">
+          <img src="img/c3.jpg" width="300" height="100" alt="Презентации">
           <b>Презентации</b>
           <p>Вы даже не подозреваете,<br>  насколько вы изумительны!</p>
           <a href="#" class="btn-yellow">Заказать</a>
@@ -77,7 +79,7 @@
         </ul>
       </div>
       <div class="main-right">
-        <img src="imgers/text-img.png" alt="логотип" class="text-img">
+        <img src="img/nerds-illustration.jpg"  width="360" height="208" alt="логотип" class="text-img">
         <b>с 2004 года Любим точность во всем:</b>
         <ul class="text-item">
           <li>
@@ -96,10 +98,10 @@
       </div>
     </section>
     <section class="partners">
-      <a href="#" img src="images/p1.png" alt="htmlacademy"></a>
-      <a href="#" img src="images/p1.png" alt="borodinski"></a>
-      <a href="#" img src="images/p1.png" alt="pink"></a>
-      <a href="#" img src="images/p1.png" alt="mishka"></a>
+      <a href="#" img src="img/p1.png"  width="199" height="68" alt="htmlacademy"></a>
+      <a href="#" img src="img/p2.png"  width="209" height="90" alt="borodinski"></a>
+      <a href="#" img src="img/p3.png"  width="185" height="52" alt="pink"></a>
+      <a href="#" img src="img/p4.png"  width="173" height="84" alt="mishka"></a>
     </section>
     </main>
     <section class="map">
