--- a/index.html
+++ b/index.html
@@ -12,35 +12,44 @@
          width="160" height="65"></a>
       <ul class="top-nav-list main-right">
         <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенты</a></li>
+        <li><a href="#">Клиенcты</a></li>
         <li><a href="#">Магазин</a></li>
         <li><a href="#">Контакты</a></li>
+        <li><img src="img/cart-icon.jpg" class="icon-basket" alt="значек корзины" </li>
         <li><a href="#" class="top-nav-backet">Корзина</a></li>
       </ul>
+    </div>
+    <div class="clearfix">
     </div>
   </nav>
   <header class="header">
     <div class="main slider slider-1">
       <div class="slider-text">
-        <h1 class="header-title">Долго, дорого, скурпулезно</h1>
+        <h1 class="header-title">Долго, дорого,<br> скурпулезно</h1>
         <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
         <a href="#" class="btn">Узнать больше</a>
+      </div>
+      <div class="clearfix">
       </div>
     </div>
 
     <div class="main slider slider-2">
       <div class="slider-text">
-        <h2 class="header-title">Только ночь, только харкор</h2>
+        <h2 class="header-title">Только ночь,<br> только харкор</h2>
         <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается</p>
         <a href="#" class="btn">Узнать больше</a>
+      </div>
+      <div class="clearfix">
       </div>
     </div>
     <div class="main slider slider-3">
       <div class="slider-text">
-        <h2 class="header-title">Любим математику как никто другой</h2>
+        <h2 class="header-title">Любим математику<br> как никто другой</h2>
         <p>Никакого креатива, только математические формулы<br>для расчета
            идеальной пропорции для вашего сайта или мобильного приложения</p>
            <a href="#" class="btn">Узнать больше</a>
+      </div>
+      <div class="clearfix">
       </div>
     </div>
   </header>
@@ -66,9 +75,11 @@
           <a href="#" class="btn-yellow">Заказать</a>
         </li>
       </ul>
+      <div class="clearfix">
+      </div>
     <section class="text clear">
       <div class="main-left">
-        <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара</h2>
+        <h2>Мы — маленькая, но гордая</br> дизайн-студия из Краснодара.</h2>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
            превыше креатива. Работаем не покладая рук, как роботы.</p>
         <strong>Выполняем заказы на разработку:</strong>
@@ -96,13 +107,17 @@
           </li>
         </ul>
       </div>
+      <div class="clearfix">
+      </div>
     </section>
     <section class="partners">
-      <a href="#" img src="img/p1.png"  width="199" height="68" alt="htmlacademy"></a>
-      <a href="#" img src="img/p2.png"  width="209" height="90" alt="borodinski"></a>
-      <a href="#" img src="img/p3.png"  width="185" height="52" alt="pink"></a>
-      <a href="#" img src="img/p4.png"  width="173" height="84" alt="mishka"></a>
+      <a href="#"><img src="img/p1.png"  width="199" height="68" alt="htmlacademy"></a>
+      <a href="#"><img src="img/p2.png"  width="209" height="90" alt="borodinski"></a>
+      <a href="#"><img src="img/p3.png"  width="185" height="52" alt="pink"></a>
+      <a href="#"><img src="img/p4.png"  width="173" height="84" alt="mishka"></a>
     </section>
+    <div class="clearfix">
+    </div>
     </main>
     <section class="map">
       <div class="main">
@@ -119,9 +134,9 @@
     <footer class="footer">
       <div class="main clear">
         <div class="main clear">
-          <a href="#" class="social">Вконтакте</a>
-          <a href="#" class="social">Фейсбук</a>
-          <a href="#" class="social">Инстаграмм</a>
+          <a href="#" class="social"><img src="img/vk-ikon.png"  width="25" height="15" alt="vk-ikon.png"></a>
+          <a href="#" class="social"><img src="img/fb-icon.png"  width="12" height="22" alt="fb-ikon.png"></a>
+          <a href="#" class="social"><img src="img/insta-icon.png"  width="21" height="21" alt="insta-ikon.png"></a>
         </div>
         <div class="main-left">
           <strong>Давайте дружить, это выгодно!</strong>
