--- a/index.html
+++ b/index.html
@@ -4,32 +4,30 @@
   <meta charset="utf-8">
   <title>Нердс Главная</title>
   <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <nav class="top-nav">
-    <div class="main clear">
-      <a class="logo main-left"><img src="img/logo-nerds.png" alt="logo"
-         width="160" height="65"></a>
-      <ul class="top-nav-list main-right">
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенcты</a></li>
-        <li><a href="#">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
-        <li><img src="img/cart-icon.jpg" class="icon-basket" alt="значек корзины" </li>
-        <li><a href="#" class="top-nav-backet">Корзина</a></li>
-      </ul>
-    </div>
-    <div class="clearfix">
-    </div>
-  </nav>
   <header class="header">
+    <div class="main">
+      <nav class="nav clear">
+        <a class="logo"><img src="img/logo-nerds.png" alt="logo"
+         width="160" height="65"></a>
+        <ul class="top-nav-list">
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенcты</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+          <li><a href="#" class="top-nav-backet">Корзина</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <header class="header slider clear">
     <div class="main slider slider-1">
       <div class="slider-text">
         <h1 class="header-title">Долго, дорого,<br> скурпулезно</h1>
         <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
-        <a href="#" class="btn">Узнать больше</a>
-      </div>
-      <div class="clearfix">
+        <a href="#" class="btn btn-inf">Узнать больше</a>
       </div>
     </div>
 
@@ -37,9 +35,7 @@
       <div class="slider-text">
         <h2 class="header-title">Только ночь,<br> только харкор</h2>
         <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается</p>
-        <a href="#" class="btn">Узнать больше</a>
-      </div>
-      <div class="clearfix">
+        <a href="#" class="btn btn-inf">Узнать больше</a>
       </div>
     </div>
     <div class="main slider slider-3">
@@ -47,36 +43,32 @@
         <h2 class="header-title">Любим математику<br> как никто другой</h2>
         <p>Никакого креатива, только математические формулы<br>для расчета
            идеальной пропорции для вашего сайта или мобильного приложения</p>
-           <a href="#" class="btn">Узнать больше</a>
-      </div>
-      <div class="clearfix">
+           <a href="#" class="btn btn-inf">Узнать больше</a>
       </div>
     </div>
   </header>
-  <main class="main">
-      <ul class="catalog-list">
-        <li>
-          <img src="img/c1.jpg" width="300" height="100" alt="Веб-сайты">
-          <b>Веб-сайты</b>
-          <p>Мир никогда не будет прежним<br>
+  <main class="main clear">
+      <ul class="catalog-list clear">
+        <li class="catalog-index-item">
+            <img src="img/c1.jpg" width="300" height="146" alt="Веб-сайты">
+            <b>Веб-сайты</b>
+            <p>Мир никогда не будет прежним<br>
              после того как увидит ваш сайт!</p>
-          <a href="#" class="btn">Заказать</a>
+            <a href="#" class="btn">Заказать</a>
+          </li>
+          <li class="catalog-index-item">
+            <img src="img/c2.jpg" width="300" height="146" alt="Приложения">
+            <b>Приложения</b>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a href="#" class="btn btn-green">Заказать</a>
         </li>
-        <li>
-          <img src="img/c2.jpg" width="300" height="100" alt="Приложения">
-          <b>Приложения</b>
-          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
-          <a href="#" class="btn-green">Заказать</a>
-        </li>
-        <li>
-          <img src="img/c3.jpg" width="300" height="100" alt="Презентации">
-          <b>Презентации</b>
-          <p>Вы даже не подозреваете,<br>  насколько вы изумительны!</p>
-          <a href="#" class="btn-yellow">Заказать</a>
+        <li class="catalog-index-item">
+            <img src="img/c3.jpg" width="300" height="146" alt="Презентации">
+            <b>Презентации</b>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a href="#" class="btn btn-yellow">Заказать</a>
         </li>
       </ul>
-      <div class="clearfix">
-      </div>
     <section class="text clear">
       <div class="main-left">
         <h2>Мы — маленькая, но гордая</br> дизайн-студия из Краснодара.</h2>
@@ -107,8 +99,6 @@
           </li>
         </ul>
       </div>
-      <div class="clearfix">
-      </div>
     </section>
     <section class="partners">
       <a href="#"><img src="img/p1.png"  width="199" height="68" alt="htmlacademy"></a>
@@ -116,8 +106,6 @@
       <a href="#"><img src="img/p3.png"  width="185" height="52" alt="pink"></a>
       <a href="#"><img src="img/p4.png"  width="173" height="84" alt="mishka"></a>
     </section>
-    <div class="clearfix">
-    </div>
     </main>
     <section class="map">
       <div class="main">
@@ -127,22 +115,20 @@
             191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8  тел.
           </address>
           <p>тел. +7 (812)275-75-75</p>
-          <a href="#" class="btn">Напишите нам</a>
+          <a href="#" class="btn btn-write">Напишите нам</a>
         </div>
       </div>
     </section>
-    <footer class="footer">
-      <div class="main clear">
-        <div class="main clear">
+    <footer class="footer clear">
+        <div class="main-social">
           <a href="#" class="social"><img src="img/vk-ikon.png"  width="25" height="15" alt="vk-ikon.png"></a>
           <a href="#" class="social"><img src="img/fb-icon.png"  width="12" height="22" alt="fb-ikon.png"></a>
           <a href="#" class="social"><img src="img/insta-icon.png"  width="21" height="21" alt="insta-ikon.png"></a>
         </div>
-        <div class="main-left">
+        <div class="footer-text">
           <strong>Давайте дружить, это выгодно!</strong>
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </div>
-      </div>
     </footer>
 </body>
 </html>
