--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Нердс Главная</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-</head>
 <body>
   <header class="header">
     <div class="main">
@@ -109,6 +108,8 @@
     </main>
     <section class="map">
       <div class="main">
+        <div class="map1">
+        </div>
         <div class="map-text">
           <h3>NЁRDS DESIGN STUDIO</h3>
           <address>
