--- a/catalog.html
+++ b/catalog.html
@@ -6,148 +6,152 @@
  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="top-nav">
-    <div class="main clear">
-      <a class="logo main-left"><img src="img/logo-nerds.png" alt="logo"
-         width="160" height="65"></a>
-      <ul class="top-nav-list main-right">
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенты</a></li>
-        <li><a href="#">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
-        <li><a href="#" class="top-nav-backet">Корзина</a></li>
-      </ul>
-    </div>
-  </nav>
   <header class="header">
-   <h1 class="header-h1">Магазин готовых шаблонов</h1>
-  </header>
-  <main class="main clear">
-   <form class="main-left" action="#" method="post">
-    <h4>Стоимость</h4>
-    <div class="slide">
-      <span class="bul-left"></span>
-      <span class="bul-right"></span>
+    <div class="main">
+      <nav class="nav clear">
+        <a class="logo"><img src="img/logo-nerds.png" alt="logo"
+         width="160" height="65"></a>
+        <ul class="top-nav-list">
+          <li><a class="active" href="#">Студия</a></li>
+          <li><a class="active" href="#">Клиенcты</a></li>
+          <li><a class="active" href="#">Магазин</a></li>
+          <li><a class="active" href="#">Контакты</a></li>
+          <li><a class="active" href="#" class="top-nav-backet">Корзина</a></li>
+        </ul>
+      </nav>
     </div>
-    <lable class="slide-text">
-      От<input type="text" name="ot" placeholder="0">
-    </label>
-    <label class="slide-text">
-      До<input type="text" name="ot" placeholder="15 000">
-    </label>
-    <h4>Сетка</h4>
-    <label class="radio"><input type="radio">Адаптивная</label>
-    <label class="radio"><input type="radio">Фиксированная</label>
-    <label class="radio"><input type="radio">Резиновая</label>
-    <h4>Особенности</h4>
-    <label class="checkbox"><input type="checkbox">Слайдер</label>
-    <label class="checkbox"><input type="checkbox">Блок преимуществ</label>
-    <label class="checkbox"><input type="checkbox">Новости</label>
-    <label class="checkbox"><input type="checkbox">Галерея</label>
-    <label class="checkbox"><input type="checkbox">Корзина</label>
-    <button>Показать</button>
-  </form>
-   <div class="main-right">
-     <div class="soft">
-       <h4 class="main-left">Сортировать</h4>
-       <div class="main-right">
-         <a href="#">По цене</a>
-         <a href="#">По типу</a>
-         <a href="#">По названию</a>
-         <a href="#" class="arrow arrow-battom">Вниз</a>
-         <a href="#" class="arrow arrow-top">Вверх</a>
+  </header>
+  <div class="header-top">
+   <h1 class="header-h1">Магазин готовых шаблонов</h1>
+ </div>
+  <main class="main clear">
+    <form class="main-filter" action="#" method="post">
+      <h4>Стоимость</h4>
+      <div class="slide">
+        <span class="bul-left"></span>
+        <span class="bul-right"></span>
+      </div>
+      <lable class="slide-text">
+        От<input type="text" name="ot" placeholder="0">
+      </label>
+      <label class="slide-text">
+        До<input type="text" name="ot" placeholder="15 000">
+      </label>
+      <h4>Сетка</h4>
+      <label class="radio"><input type="radio">Адаптивная</label>
+      <label class="radio"><input type="radio">Фиксированная</label>
+      <label class="radio"><input type="radio">Резиновая</label>
+      <h4>Особенности</h4>
+      <label class="checkbox"><input type="checkbox">Слайдер</label>
+      <label class="checkbox"><input type="checkbox">Блок преимуществ</label>
+      <label class="checkbox"><input type="checkbox">Новости</label>
+      <label class="checkbox"><input type="checkbox">Галерея</label>
+      <label class="checkbox"><input type="checkbox">Корзина</label>
+      <button class="btn btn-filter">Показать</button>
+    </form>
+   <div class="main clear">
+     <div class="catalog-conteiner">
+       <div class="softr">
+         <h4>Сортировать</h4>
+         <div class="main-right">
+           <a href="#">По цене</a>
+           <a href="#">По типу</a>
+           <a href="#">По названию</a>
+           <a href="#" class="arrow arrow-battom">Вниз</a>
+           <a href="#" class="arrow arrow-top">Вверх</a>
+         </div>
        </div>
+       <ul class="catalog">
+         <li>
+           <div class="catalog-header">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <img src="img/img-sedona.jpg" width="360" height="576" alt="sedona">
+           <div class="catalog-over">
+             <b>Sedona</b>
+             <p>Информационный сайт для туристов</p>
+             <a href="#" class="btn catalog-btn">9 900</a>
+           </div>
+         </li>
+         <li>
+           <div class="catalog-header">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <img src="img/img-pink.jpg" width="360" height="576" alt="pink app">
+           <div class="catalog-over">
+             <b>Pink app</b>
+             <p>Продуктивный лендинг приложения для iOS и Android</p>
+             <a href="#" class="btn catalog-btn">9 900</a>
+           </div>
+         </li>
+         <li>
+           <div class="catalog-header">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
+           <div class="catalog-over">
+             <b>Barbershop</b>
+             <p>Сайт салона красоты. Для мужчин, да.</p>
+             <a href="#" class="btn catalog-btn">9 900</a>
+           </div>
+         </li>
+         <li>
+           <div class="catalog-header">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
+           <div class="catalog-over">
+             <b>Mishka</b>
+             <p>Интернет магазин вязанных игрушек</p>
+             <a href="#" class="btn catalog-btn">9 900</a>
+           </div>
+         </li>
+         <li>
+           <div class="catalog-header">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
+           <div class="catalog-over">
+             <b>A plus</b>
+             <p>Лендинг курсов повышения квалификации</p>
+             <a href="#" class="btn catalog-btn">9 900</a>
+           </div>
+         </li>
+         <li>
+           <div class="catalog-header">
+            <span></span>
+            <span></span>
+            <span></span>
+           </div>
+           <img src="img/img-kvast.jpg" width="360" height="576" alt="Квас">
+           <div class="catalog-over">
+             <b>Квас</b>
+             <p>Промо-сайт производителя крафтового кваса</p>
+             <a href="#" class="btn catalog-btn">9 900</a>
+           </div>
+         </li>
+       </ul>
+       <ul class="catalog-nav">
+         <li><a href="#">1</a></li>
+         <li><a href="#">2</a></li>
+         <li><a href="#">3</a></li>
+         <li><a href="#">Следующая</a></li>
+       </ul>
      </div>
-     <ul class="catalog">
-       <li>
-         <div class="catalog-header">
-          <span></span>
-          <span></span>
-          <span></span>
-         </div>
-         <img src="img/img-sedona.jpg" width="360" height="576" alt="sedona">
-         <div class="catalog-over">
-           <b>Sedona</b>
-           <p>Информационный сайт для туристов</p>
-           <a href="#" class="btn catalog btn">9 900</a>
-         </div>
-       </li>
-       <li>
-         <div class="catalog-header">
-          <span></span>
-          <span></span>
-          <span></span>
-         </div>
-         <img src="img/img-pink.jpg" width="360" height="576" alt="pink app">
-         <div class="catalog-over">
-           <b>Pink app</b>
-           <p>Продуктивный лендинг приложения для iOS и Android</p>
-           <a href="#" class="btn catalog btn">9 900</a>
-         </div>
-       </li>
-       <li>
-         <div class="catalog-header">
-          <span></span>
-          <span></span>
-          <span></span>
-         </div>
-         <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
-         <div class="catalog-over">
-           <b>Barbershop</b>
-           <p>Сайт салона красоты. Для мужчин, да.</p>
-           <a href="#" class="btn catalog btn">9 900</a>
-         </div>
-       </li>
-       <li>
-         <div class="catalog-header">
-          <span></span>
-          <span></span>
-          <span></span>
-         </div>
-         <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
-         <div class="catalog-over">
-           <b>Mishka</b>
-           <p>Интернет магазин вязанных игрушек</p>
-           <a href="#" class="btn catalog btn">9 900</a>
-         </div>
-       </li>
-       <li>
-         <div class="catalog-header">
-          <span></span>
-          <span></span>
-          <span></span>
-         </div>
-         <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
-         <div class="catalog-over">
-           <b>A plus</b>
-           <p>Лендинг курсов повышения квалификации</p>
-           <a href="#" class="btn catalog btn">9 900</a>
-         </div>
-       </li>
-       <li>
-         <div class="catalog-header">
-          <span></span>
-          <span></span>
-          <span></span>
-         </div>
-         <img src="img/img-kvast.jpg" width="360" height="576" alt="Квас">
-         <div class="catalog-over">
-           <b>Квас</b>
-           <p>Промо-сайт производителя крафтового кваса</p>
-           <a href="#" class="btn catalog btn">9 900</a>
-         </div>
-       </li>
-     </ul>
-     <ul class="catalog-nav">
-       <li><a href="#">1</a></li>
-       <li><a href="#">2</a></li>
-       <li><a href="#">3</a></li>
-       <li><a href="#">Следующая</a></li>
-     </ul>
    </div>
   </main>
   <section class="map">
-    <div class="main">
+    <div class="main clear">
       <div class="map-text">
         <h3>NЁRDS DESIGN STUDIO</h3>
         <address>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8  тел.</address>
@@ -159,11 +163,12 @@
   <footer class="footer">
     <div class="main clear">
       <div class="main clear">
-        <a href="#" class="social">Вконтакте</a>
-        <a href="#" class="social">Фейсбук</a>
-        <a href="#" class="social">Инстаграмм</a>
+        <a href="#" class="social"><img src="img/vk-ikon.png"  width="25" height="15" alt="vk-ikon.png"></a>
+        <a href="#" class="social"><img src="img/fb-icon.png"  width="12" height="22" alt="fb-ikon.png"></a>
+        <a href="#" class="social"><img src="img/insta-icon.png"  width="21" height="21" alt="insta-ikon.png"></a>
       </div>
-      <div class="main-left">
+      </div>
+      <div class="footer-text">
         <strong>Давайте дружить, это выгодно!</strong>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
